-[FRONTEND] New dashboard page to show the Corporation data, the current logged Pilot data and the functionality selection toolbar. -[TESTING] Increases the code coverage for the new code. -[FEATURE] Added two new components to the dashboard page.
Former-commit-id: a640fc31e32989e0d158a13c47d06d58e34ef382

--- a/NeoCom.Infinity.Frontend/src/app/pages/dashboard-home-page/dashboard-home-page.component.html
+++ b/NeoCom.Infinity.Frontend/src/app/pages/dashboard-home-page/dashboard-home-page.component.html
@@ -1,4 +1,6 @@
 <div class="page-container">
-<app-info-panel id="appinfo-panel" class="neocom-panel app-info-panel"></app-info-panel>
-<server-info-panel style="flex-grow: 1;"></server-info-panel>
+    <app-info-panel id="appinfo-panel" class="neocom-panel app-info-panel"></app-info-panel>
+    <server-info-panel id="server-info-panel" class="neocom-panel server-info-panel"></server-info-panel>
 </div>
+<corporation-public-data-panel id="corporation-public-data-panel"></corporation-public-data-panel>
+<pilot-public-data-panel id="pilot-public-data-panel"></pilot-public-data-panel>
