--- a/NeoCom.Infinity.Frontend/src/app/pages/dashboard-home-page/dashboard-home-page.component.scss
+++ b/NeoCom.Infinity.Frontend/src/app/pages/dashboard-home-page/dashboard-home-page.component.scss
@@ -1,7 +1,12 @@
-.page-container{
-display: flex;
+.page-container {
+    display: flex;
 }
-.app-info-panel{
+
+.app-info-panel {
     width: 68%;
     margin-right: 2px;
+}
+
+.server-info-panel {
+    width: 32%;
 }
