-[FRONTEND] New dashboard page to show the Corporation data and the current logged Pilot data. -[FRONTEND] removed the environment isolation from the isolation service.
Former-commit-id: c2dbe5f3c5e9f8b7fb750995dc0ba3dca02ce478

--- a/NeoCom.Infinity.Frontend/src/app/modules/shared/panels/pilot-public-data-panel/pilot-public-data-panel.component.html
+++ b/NeoCom.Infinity.Frontend/src/app/modules/shared/panels/pilot-public-data-panel/pilot-public-data-panel.component.html
@@ -1,1 +1,17 @@
-<p>pilot-public-data-panel works!</p>
+<div class="neocom-panel panel-blue">
+    <table *ngIf="pilot else loading" cellspacing="2px" cellpadding="0" width="100%">
+        <tr>
+            <td width="64px">
+                <img class="neocom-icon" id="corporation-icon" src="{{getPilotIcon()}}">
+            </td>
+            <td class="neocom-panel-column">
+                <div *ngIf="pilot">
+                    <span id="corporation-name " class="neocom-selectable-name ">{{pilot.name}}</span>
+                </div>
+            </td>
+        </tr>
+    </table>
+    <ng-template #loading>
+        <div>Loading...</div>
+    </ng-template>
+</div>
