--- a/NeoCom.Infinity.Frontend/src/app/modules/shared/panels/corporation-public-data-panel/corporation-public-data-panel.component.html
+++ b/NeoCom.Infinity.Frontend/src/app/modules/shared/panels/corporation-public-data-panel/corporation-public-data-panel.component.html
@@ -1,42 +1,45 @@
 <div class="neocom-panel panel-orange">
-    <!-- <div class="panel-decorator-collapsed"> -->
-    <table class="neocom-panel-container" cellspacing="0" cellpadding="0" width="100%">
+    <table *ngIf="corporation else loading" cellspacing="2px" cellpadding="0" width="100%">
         <tr>
-            <!-- ICON SECTION -->
-            <td width="94px">
-                <img class="neocom-icon" id="iconsize-90" src="{{getCorporationIcon()}}">
+            <td></td>
+            <td class="elemental-ff">CORPORATION</td>
+            <td class="elemental-ff">CORPORATION CEO</td>
+            <td class="elemental-ff">ALLIANCE</td>
+        </tr>
+        <tr>
+            <td width="64px">
+                <img class="neocom-icon" id="corporation-icon" src="{{getCorporationIcon()}}">
             </td>
-            <!-- CENTRAL SECTION -->
-            <td class="neocom-panel-column" width="80%">
+            <td class="neocom-panel-column">
+                <!-- CORPORATION -->
+                <div *ngIf="this.corporation">
+                    <span id="corporation-name" class="neocom-selectable-name">{{corporation.name}}</span>
+                    <span id="corporation-id" class="neocom-ts14" style="margin-left: 4px;">[{{corporation.corporationId}}]</span>
+                    <div id="corporation-ticker" class="neocom-ts14">[{{corporation.ticker}}]</div>
+                    <div>
+                        <img class="iconsize-24" src="/assets/res-window/drawable/corporationmembers.png">
+                        <span id="corporation-members-count" class="neocom-ts14">{{corporation.member_count}} MEMBERS</span>
+                    </div>
+                </div>
+            </td>
+            <td>
+                <!-- CORPORATION CEO -->
+                <div *ngIf="ceo else loading">
+
+                </div>
+            </td>
+            <td>
                 <!-- ALLIANCE BLOCK -->
-                <div class="alliance-box" *ngIf="getAlliance()">
+                <div *ngIf="alliance else notassociated" class="alliance-box">
                     <alliance-render [node]="getAlliance()"></alliance-render>
                 </div>
-                <div class="neocom-label">ALLIANCE</div>
-                <!-- CORPORATION BLOCK -->
-                <!-- <div class="alliance-box">
-                    <div>
-                        <span class="neocom-selectable-name">{{node.name}}</span>
-                        <span id="neocom-ts14" style="margin-left: 5px;">[{{node.getId()}}]</span>
-                        <div id="neocom-ts14">[{{node.ticker}}]</div>
-                    </div>
-                    <div>
-                        <img class="" id="iconsize-24" src="/assets/res-window/drawable/corporationmembers.png">
-                    </div>
-                    <div id="neocom-ts14">{{node.memberCount}} MEMBERS</div>
-                    <img class="" id="iconsize-24" src="/assets/res-window/drawable/fittingmanagement.png">
-                    <div id="neocom-ts14">2 PENDING JOBS</div>
-                </div>
-                <div class="neocom-label">CORPORATION</div>
-                <div class="alliance-box">
-                    <img class="neocom-icon" id="iconsize-36" src="{{node.ceo.getIconUrl()}}">
-                    <div>
-                        <span class="neocom-marked-name" id="neocom-ts14">{{node.ceo.name}}</span>
-                    </div>
-                </div>
-                <div class="neocom-label">CEO</div> -->
             </td>
         </tr>
     </table>
-    <!-- </div> -->
+    <ng-template #loading>
+        <div>Loading...</div>
+    </ng-template>
+    <ng-template #notassociated>
+        <div>NOT ASSOCIATED</div>
+    </ng-template>
 </div>
