-[FRONTEND][TESTING] When validating component getters use random values with setters and getters to detect hardwired contents. -[TESTING] Increased the code coverage for the new code.
Former-commit-id: ced0814099cd77062cbfa0e86c3d6dd1b160b1f4

--- a/NeoCom.Infinity.Frontend/src/app/modules/shared/panels/pilot-public-data-panel/pilot-public-data-panel.component.html
+++ b/NeoCom.Infinity.Frontend/src/app/modules/shared/panels/pilot-public-data-panel/pilot-public-data-panel.component.html
@@ -2,12 +2,15 @@
     <table *ngIf="pilot else loading" cellspacing="2px" cellpadding="0" width="100%">
         <tr>
             <td width="64px">
-                <img class="neocom-icon" id="corporation-icon" src="{{getPilotIcon()}}">
+                <img class="neocom-icon" id="corporation-icon" style="width: 66px;" src="{{getPilotIcon()}}">
             </td>
-            <td class="neocom-panel-column">
+            <td class="neocom-panel-column" valign="top" style="padding-top: 2px;">
+                <div class="elemental-ff">PILOT</div>
                 <div *ngIf="pilot">
-                    <span id="corporation-name " class="neocom-selectable-name ">{{pilot.name}}</span>
+                    <span id="corporation-name " class="neocom-selectable-name ">{{pilot.name}} [{{pilot.pilotId}}]</span>
                 </div>
+                <div>{{pilot.race.name}} - {{pilot.ancestry.name}} - {{pilot.bloodline.name}}</div>
+                <div>{{pilot.gender}}</div>
             </td>
         </tr>
     </table>
