-[CONFIGURATION] Correct the local configuration to add the home landing page and the integration with the backend on heroku.
Former-commit-id: e7b40015637891d11fd9fb1972b9c7c5665148f2

--- a/NeoCom.Infinity.Frontend/src/styles/font-styles.css
+++ b/NeoCom.Infinity.Frontend/src/styles/font-styles.css
@@ -32,7 +32,7 @@
 
 @font-face {
     font-family: 'Proxima Nova';
-    src: url('./fonts/Proxima Nova Regular.ttf') format('truetype');
+    src: url('/assets/fonts/ProximaNovaRegular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
 }
@@ -74,14 +74,14 @@
     font-family: "Elemental";
     font-style: normal;
     font-weight: normal;
-    src: url("/assets/fonts/Elemental End.ttf") format('truetype');
+    src: url("/assets/fonts/ElementalEnd.ttf") format('truetype');
 }
 
 @font-face {
     font-family: "Elemental";
     font-style: italic;
     font-weight: normal;
-    src: url("/assets/fonts/Elemental End Italic.ttf");
+    src: url("/assets/fonts/ElementalEndItalic.ttf");
 }
 
 .elemental-ff {
