-[CONFIGURATION] Updated the list of dependencies for the express server. -[FRONTEND] Fixed aot compilation errors.
Former-commit-id: 27b5756ce8dc4a673a80ed7dbdc116a6705e7d9d

--- a/NeoCom.Infinity.Frontend/src/styles.scss
+++ b/NeoCom.Infinity.Frontend/src/styles.scss
@@ -4,8 +4,8 @@
 // - APPLICATION STYLES VARIABLES
 @import "./styles/_scss_variables.scss";
 // - APPLICATION STYLE PACKS
-@import "./styles/open-sans.css";
-@import "./styles/font-styles.css";
+// @import "./styles/open-sans.css";
+@import "./styles/new-font-styles.css";
 @import "./styles/panel-styles.scss";
 @import "./styles/neocom-styles.scss";
 body {
