-[FRONTEND][ACCEPTANCE] Improved the acceptance tests and starting to normalize the code for a streaming production.
Former-commit-id: ad7a0c34d04d669504ce67e5d3ceb739bddc37f6

--- a/NeoCom.Infinity.Frontend/src/app/modules/shared/panels/server-info-panel/server-info-panel.component.html
+++ b/NeoCom.Infinity.Frontend/src/app/modules/shared/panels/server-info-panel/server-info-panel.component.html
@@ -4,5 +4,5 @@
     <span class="label">Capsuleers:</span>
     <span class="server-capsuleers">{{getServerCapsuleers() | number:'3.0-0'}}</span><br>
     <span class="label">Last Start Time:</span>
-    <span class="server-capsuleers">{{getLastStartTime()}}</span>
+    <span class="server-laststart">{{getLastStartTime()}}</span>
 </div>
