-[FRONTEND] Completed the new Corporation render.
Former-commit-id: cfcba7b3611914686ea0737c7b95d552ffa3ec4b

--- a/NeoCom.Infinity.Frontend/src/app/modules/header/corporation-public-data-panel/corporation-public-data-panel.component.html
+++ b/NeoCom.Infinity.Frontend/src/app/modules/header/corporation-public-data-panel/corporation-public-data-panel.component.html
@@ -11,7 +11,7 @@
                 <img class="neocom-icon" id="corporation-icon" src="{{getCorporationIcon()}}">
             </td>
             <td class="neocom-panel-column">
-                <corporation-render *ngIf="corporation" [node]="corporation"></corporation-render>
+                <corporation-render *ngIf="corporation" [node]="corporation" [variant]="'-HEADER-'"></corporation-render>
             </td>
             <td>
                 <!-- CORPORATION CEO -->
