--- a/NeoCom.Infinity.Frontend/src/app/modules/shared/renders/corporation-render/corporation-render.component.html
+++ b/NeoCom.Infinity.Frontend/src/app/modules/shared/renders/corporation-render/corporation-render.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="variant === '-DEFAULT-'" class="corporation-item">
+<div *ngIf="variant === '-HEADER-'" class="corporation-item">
     <div *ngIf="node">
         <span id="corporation-name" class="neocom-selectable-name">{{node.getName()}}</span>
         <span id="corporation-id" class="neocom-ts14" style="margin-left: 4px;">[{{node.corporationId}}]</span>
