-[FRONTEND] Added a new component for the Pilot public data and the corresponding render.
Former-commit-id: a8d39db568e8d0966502b3c12e4b85b29c2febb0

--- a/NeoCom.Infinity.Frontend/src/app/modules/header/corporation-public-data-panel/corporation-public-data-panel.component.html
+++ b/NeoCom.Infinity.Frontend/src/app/modules/header/corporation-public-data-panel/corporation-public-data-panel.component.html
@@ -6,18 +6,16 @@
             <td class="elemental-ff">CORPORATION CEO</td>
             <td class="elemental-ff">ALLIANCE</td>
         </tr>
-        <tr>
+        <tr *ngIf="corporation else loading">
             <td width="64px">
                 <img class="neocom-icon" id="corporation-icon" src="{{getCorporationIcon()}}">
             </td>
-            <td class="neocom-panel-column">
+            <td>
                 <corporation-render *ngIf="corporation" [node]="corporation" [variant]="'-HEADER-'"></corporation-render>
             </td>
             <td>
-                <!-- CORPORATION CEO -->
-                <div *ngIf="ceo else loading">
-
-                </div>
+                <pilot-render *ngIf="getCorporationCeo() else loading" [node]="getCorporationCeo()" [variant]="'-HEADER-'">
+                </pilot-render>
             </td>
             <td>
                 <!-- ALLIANCE BLOCK -->
@@ -28,7 +26,7 @@
         </tr>
     </table>
     <ng-template #loading>
-        <div>Loading...</div>
+        <div class="loading-label">Pending Data Download...</div>
     </ng-template>
     <ng-template #notassociated>
         <div>NOT ASSOCIATED</div>
