--- a/NeoCom.Infinity.Frontend/src/styles/new-font-styles.css
+++ b/NeoCom.Infinity.Frontend/src/styles/new-font-styles.css
@@ -14,6 +14,20 @@
     src: url('/assets/fonts/Open-Sans/Italic/OpenSans-Italic.woff2') format('woff2'), url('/assets/fonts/Open-Sans/Italic/OpenSans-Italic.woff') format('woff'), url('/assets/fonts/Open-Sans/Italic/OpenSans-Italic.ttf') format('truetype'), url('/assets/fonts/Open-Sans/Italic/OpenSans-Italic.svg#OpenSansItalic') format('svg');
 }
 
+@font-face {
+    font-family: 'Open Sans';
+    font-weight: 300;
+    font-style: normal;
+    src: url('/assets/fonts/Open-Sans/Light/OpenSans-Light.woff2') format('woff2'), url('/assets/fonts/Open-Sans/Light/OpenSans-Light.woff') format('woff'), url('/assets/fonts/Open-Sans/Light/OpenSans-Light.ttf') format('truetype'), url('/assets/fonts/Open-Sans/Light/OpenSans-Light.svg#OpenSansLight') format('svg');
+}
+
+@font-face {
+    font-family: 'Open Sans';
+    font-weight: 300;
+    font-style: italic;
+    src: url('/assets/fonts/Open-Sans/LightItalic/OpenSans-LightItalic.woff2') format('woff2'), url('/assets/fonts/Open-Sans/LightItalic/OpenSans-LightItalic.woff') format('woff'), url('/assets/fonts/Open-Sans/LightItalic/OpenSans-LightItalic.ttf') format('truetype'), url('/assets/fonts/Open-Sans/LightItalic/OpenSans-LightItalic.svg#OpenSansLightItalic') format('svg');
+}
+
 .open-ff {
     font-family: 'Open Sans';
 }
