--- a/NeoCom.Infinity.Frontend/src/app/modules/shared/panels/pilot-public-data-panel/pilot-public-data-panel.component.html
+++ b/NeoCom.Infinity.Frontend/src/app/modules/shared/panels/pilot-public-data-panel/pilot-public-data-panel.component.html
@@ -1,20 +1,10 @@
 <div class="neocom-panel panel-blue">
     <table *ngIf="pilot else loading" cellspacing="2px" cellpadding="0" width="100%">
         <tr>
-            <td width="64px">
-                <img class="neocom-icon" id="corporation-icon" style="width: 66px;" src="{{getPilotIcon()}}">
-            </td>
-            <td class="neocom-panel-column" valign="top" style="padding-top: 2px;">
-                <div class="elemental-ff">PILOT</div>
-                <div *ngIf="pilot">
-                    <span id="corporation-name " class="neocom-selectable-name ">{{pilot.name}} [{{pilot.pilotId}}]</span>
-                </div>
-                <div>{{pilot.race.name}} - {{pilot.ancestry.name}} - {{pilot.bloodline.name}}</div>
-                <div>{{pilot.gender}}</div>
-            </td>
+            <pilot-render [node]="pilot" variant="-HEADER-"></pilot-render>
         </tr>
     </table>
     <ng-template #loading>
-        <div>Loading...</div>
+        <div class="loading-label">Pending Data Download...</div>
     </ng-template>
 </div>
