--- a/NeoCom.Infinity.Frontend/src/app/modules/shared/panels/server-info-panel/server-info-panel.component.scss
+++ b/NeoCom.Infinity.Frontend/src/app/modules/shared/panels/server-info-panel/server-info-panel.component.scss
@@ -1,13 +1,32 @@
+.loading-label {
+    font-family: 'Elemental';
+    color: orange
+}
+
 .server-info-panel {
-padding: 2px;
+    padding: 2px;
 }
-.server-status {
+
+#server-name {
+    font-size: 14px;
+    font-weight: 700;
+    color: orange;
+}
+
+#server-status {
     float: right;
-    font-weight: 800;
     color: green;
+    font-weight: 700;
     margin-right: 2px;
 }
-.server-capsuleers {
-    float: right;   
+
+#server-capsuleers {
+    float: right;
     margin-right: 2px;
+}
+
+#server-laststart {
+    float: right;
+    font-size: 12px;
+    font-weight: 100;
 }
