-[FRONTEND] Added the Alliance render.
Former-commit-id: 694e6a1789138672a899b9ac9053abe8ac1a0490

--- a/NeoCom.Infinity.Frontend/src/app/modules/header/corporation-public-data-panel/corporation-public-data-panel.component.html
+++ b/NeoCom.Infinity.Frontend/src/app/modules/header/corporation-public-data-panel/corporation-public-data-panel.component.html
@@ -18,10 +18,7 @@
                 </pilot-render>
             </td>
             <td>
-                <!-- ALLIANCE BLOCK -->
-                <!-- <div *ngIf="alliance else notassociated" class="alliance-box">
-                    <alliance-render [node]="getAlliance()"></alliance-render>
-                </div> -->
+                <alliance-render *ngIf="getAlliance() else loading" [node]="getAlliance()" [variant]="'-HEADER-'"></alliance-render>
             </td>
         </tr>
     </table>
