--- a/NeoCom.Infinity.Frontend/src/app/modules/shared/renders/alliance-render/alliance-render.component.html
+++ b/NeoCom.Infinity.Frontend/src/app/modules/shared/renders/alliance-render/alliance-render.component.html
@@ -1,6 +1,11 @@
-<p>alliance-render works!</p>
-<img class="neocom-icon" id="iconsize-36" src="{{getAllianceIcon()}}">
-<div class="">
-    <span id="neocom-ts14">{{node.name}}</span><br>
-    <span id="neocom-ts14">[{{node.ticker}}]</span>
+<div *ngIf="variant === '-HEADER-'" class="alliance-item">
+    <div *ngIf="node" class="horizontal-container">
+        <div width="64px">
+            <img class="neocom-icon" id="alliance-icon" style="width: 66px;" src="{{node.getAllianceIcon()}}">
+        </div>
+        <div class="">
+            <span id="alliance-name">{{node.name}}</span><br>
+            <span id="alliance-ticker">[{{node.ticker}}]</span>
+        </div>
+    </div>
 </div>
