--- a/NeoCom.Infinity.Frontend/src/app/modules/shared/renders/pilot-render/pilot-render.component.html
+++ b/NeoCom.Infinity.Frontend/src/app/modules/shared/renders/pilot-render/pilot-render.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="variant === '-HEADER-'" class="corporation-item">
+<div *ngIf="variant === '-HEADER-'" class="pilot-item">
     <div *ngIf="node" class="horizontal-container">
         <div width="64px">
             <img class="neocom-icon" id="pilot-icon" style="width: 66px;" src="{{node.getPilotIcon()}}">
