--- a/NeoCom.Infinity.Frontend/src/app/modules/shared/panels/server-info-panel/server-info-panel.component.html
+++ b/NeoCom.Infinity.Frontend/src/app/modules/shared/panels/server-info-panel/server-info-panel.component.html
@@ -5,7 +5,7 @@
         <span class="label">Capsuleers:</span>
         <span id="server-capsuleers">{{getServerCapsuleers() | number:'3.0-0'}}</span><br>
         <span class="label">Last Start Time:</span>
-        <span id="server-laststart">{{serverInfo.start_time}}</span>
+        <span id="server-laststart">{{serverInfo.getStartTime()}}</span>
     </div>
     <ng-template #loading>
         <div class="loading-label">Pending Data Download...</div>
