-[FRONTEND][TESTING] Fixed changes tests and failures. -[FRONTEND] Updated the corporation data render.
Former-commit-id: aeb8c8e1aa9330bb5f5beb253462d048f9d6d606

--- a/NeoCom.Infinity.Frontend/src/app/modules/shared/renders/corporation-render/corporation-render.component.html
+++ b/NeoCom.Infinity.Frontend/src/app/modules/shared/renders/corporation-render/corporation-render.component.html
@@ -1,11 +1,16 @@
 <div *ngIf="variant === '-HEADER-'" class="corporation-item">
-    <div *ngIf="node">
-        <span id="corporation-name" class="neocom-selectable-name">{{node.getName()}}</span>
-        <span id="corporation-id" class="neocom-ts14" style="margin-left: 4px;">[{{node.corporationId}}]</span>
-        <div id="corporation-ticker" class="neocom-ts14">[{{node.getTicker()}}]</div>
-        <div>
-            <img class="iconsize-24" src="/assets/res-window/drawable/corporationmembers.png">
-            <span id="corporation-members-count" class="neocom-ts14">{{node.getMemberCount()}} MEMBERS</span>
+    <div *ngIf="node" class="horizontal-container">
+        <div width="64px">
+            <img id="corporation-icon" class="corporation-icon" src="{{getCorporationIcon()}}">
+        </div>
+        <div style="margin-left: 2px;">
+            <span id="corporation-name" class="neocom-selectable-name">{{node.getName()}}</span>
+            <span id="corporation-id" class="neocom-ts14" style="margin-left: 4px;">[#{{node.corporationId}}]</span>
+            <div id="corporation-ticker" class="neocom-ts14">[{{node.getTicker()}}]</div>
+            <div>
+                <img class="iconsize-24" src="/assets/res-window/drawable/corporationmembers.png">
+                <span id="corporation-members-count" class="neocom-ts14">{{node.getMemberCount()}} MEMBERS</span>
+            </div>
         </div>
     </div>
 </div>
