--- a/NeoCom.Infinity.Frontend/src/app/modules/shared/renders/corporation-render/corporation-render.component.scss
+++ b/NeoCom.Infinity.Frontend/src/app/modules/shared/renders/corporation-render/corporation-render.component.scss
@@ -1,3 +1,9 @@
+#corporation-icon {
+    border: white 1px solid;
+    box-shadow: inset 0 0 4px 1px rgba(255, 255, 255, 0.73), 0 0 4px 1px rgba(255, 255, 255, 0.73);
+    margin: 2px;
+}
+
 #corporation-name {
     font-size: 14px;
     font-weight: 700;
