-[FRONTEND] Adding removed code that was failing tests on previous framework.
Former-commit-id: c28209f9a1ecaa09f9569ff3a282aa49ba347b4a

--- a/NeoCom.Infinity.Frontend/src/app/modules/header/pilot-public-data-panel/pilot-public-data-panel.component.html
+++ b/NeoCom.Infinity.Frontend/src/app/modules/header/pilot-public-data-panel/pilot-public-data-panel.component.html
@@ -1,7 +1,12 @@
 <div class="neocom-panel panel-blue">
     <table *ngIf="pilot else loading" cellspacing="2px" cellpadding="0" width="100%">
         <tr>
-            <pilot-render [node]="pilot" variant="-HEADER-"></pilot-render>
+            <td id="pilot-header" class="elemental-ff">PILOT</td>
+        </tr>
+        <tr>
+            <td>
+                <pilot-render [node]="pilot" variant="-HEADER-"></pilot-render>
+            </td>
         </tr>
     </table>
     <ng-template #loading>
