--- a/NeoCom.Infinity.Frontend/src/app/pages/dashboard-home-page/dashboard-home-page.component.html
+++ b/NeoCom.Infinity.Frontend/src/app/pages/dashboard-home-page/dashboard-home-page.component.html
@@ -5,4 +5,6 @@
 <div>
     <corporation-public-data-panel id="corporation-public-data-panel"></corporation-public-data-panel>
 </div>
-<!-- <pilot-public-data-panel id="pilot-public-data-panel"></pilot-public-data-panel> -->
+<div>
+    <pilot-public-data-panel id="pilot-public-data-panel"></pilot-public-data-panel>
+</div>
