-[FRONTEND] Updated the Pilot information to allow the search for the items on the e2e testing. -[FRONTEND][ACCEPTANCE] Completing the testing for the dashboard page.
Former-commit-id: cd2b55a62b01f078c020768aaca78f16ff8dc7f9

--- a/NeoCom.Infinity.Frontend/src/app/modules/shared/renders/pilot-render/pilot-render.component.scss
+++ b/NeoCom.Infinity.Frontend/src/app/modules/shared/renders/pilot-render/pilot-render.component.scss
@@ -1,12 +1,12 @@
-#pilot-name {
+.pilot-name {
     font-size: 14px;
     font-weight: 700;
 }
 
-#pilot-id {
+.pilot-id {
     font-weight: 100;
 }
 
-#pilot-ancestry {
+.pilot-ancestry {
     font-weight: 700;
 }
