--- a/NeoCom.Infinity.Frontend/src/app/modules/shared/renders/pilot-render/pilot-render.component.html
+++ b/NeoCom.Infinity.Frontend/src/app/modules/shared/renders/pilot-render/pilot-render.component.html
@@ -4,10 +4,10 @@
             <img class="neocom-icon" id="pilot-icon" style="width: 66px;" src="{{node.getPilotIcon()}}">
         </div>
         <div style="margin-left: 2px;">
-            <span id="pilot-name ">{{node.name}} </span><span id="pilot-id">[{{node.pilotId}}]</span>
-            <div *ngIf="node.race" id="pilot-ancestry">{{node.race.name}} - {{node.ancestry.name}} - {{node.bloodline.name}}</div>
-            <div id="pilot-gender">{{node.gender}}</div>
-            <div id="pilot-lastlocation">&gt;&gt;&gt; Last Location</div>
+            <span class="pilot-name">{{node.name}}</span><span class="pilot-id">[{{node.pilotId}}]</span>
+            <div *ngIf="node.race" class="pilot-ancestry">{{node.race.name}} - {{node.ancestry.name}} - {{node.bloodline.name}}</div>
+            <div class="pilot-gender">{{node.gender}}</div>
+            <div class="pilot-lastlocation">&gt;&gt;&gt; Last Location</div>
         </div>
     </div>
 </div>
